# pvault

./: .env.example  .firebaserc  .gitignore  QUICKSTART.md  README.md  firebase.json  firestore.indexes.json  firestore.rules  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.cjs  vite.config.ts
.github/workflows/: deploy.yml
docs/: decisions.md
prompts/: sprint-0.md  sprint-1.0.1.md  sprint-1.md  sprint-2.md  sprint-3.md  sprint-4.md  sprint-5.1.md  sprint-5.md  sprint-6.md
pvault/: __init__.py  cli.py  controller.py  models.py  storage.py
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/: AppShell.tsx  Button.tsx  Card.tsx  ErrorBanner.tsx  ErrorBoundary.tsx  Input.tsx  MonthSelector.tsx  SubtotalBar.tsx  TransactionFormModal.tsx
src/hooks/: useMonthKey.ts
src/ingestion/: BBParser.ts  IngestionEngine.ts  NubankParser.ts  csv.ts  fileIO.ts  firestoreUpsert.ts  importUploadedFiles.ts  types.ts
src/lib/: admin.ts  auth.ts  categorizeTransaction.ts  date.ts  firebase.ts  firestore.ts  importReviewStorage.ts  merchantRules.ts  money.ts  normalizeText.ts  parseInstallments.ts
src/pages/: AdminPage.tsx  BudgetPage.tsx  CardsPage.tsx  CategoriesPage.tsx  ForgotPasswordPage.tsx  HomePage.tsx  ImportTransactionsPage.tsx  LoginPage.tsx  RecurringPage.tsx  RegisterPage.tsx  StatementsPage.tsx  (+1 more)
tests/: __init__.py  test_controller.py  test_models.py  test_storage.py
upload/: Extrato conta corrente - 012026.csv  Extrato conta corrente - 122025 (1).csv  Nubank_2025-12-10 (1).csv  Nubank_2026-02-10.csv
(+24 files in other folders)
